@@ -1,11 +1,9 @@
 package net.minecraft.server.packs.resources;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
@@ -17,9 +15,11 @@ public interface ResourceManager extends ResourceProvider {
 
 	boolean hasResource(ResourceLocation resourceLocation);
 
-	List<Resource> getResources(ResourceLocation resourceLocation) throws IOException;
+	List<ResourceThunk> getResourceStack(ResourceLocation resourceLocation) throws IOException;
 
-	Collection<ResourceLocation> listResources(String string, Predicate<String> predicate);
+	Map<ResourceLocation, ResourceThunk> listResources(String string, Predicate<ResourceLocation> predicate);
+
+	Map<ResourceLocation, List<ResourceThunk>> listResourceStacks(String string, Predicate<ResourceLocation> predicate);
 
 	Stream<PackResources> listPacks();
 
@@ -28,7 +28,7 @@ public interface ResourceManager extends ResourceProvider {
 
 		@Override
 		public Set<String> getNamespaces() {
-			return ImmutableSet.of();
+			return Set.of();
 		}
 
 		@Override
@@ -42,13 +42,18 @@ public interface ResourceManager extends ResourceProvider {
 		}
 
 		@Override
-		public List<Resource> getResources(ResourceLocation resourceLocation) {
-			return ImmutableList.of();
+		public List<ResourceThunk> getResourceStack(ResourceLocation resourceLocation) throws IOException {
+			throw new FileNotFoundException(resourceLocation.toString());
 		}
 
 		@Override
-		public Collection<ResourceLocation> listResources(String string, Predicate<String> predicate) {
-			return ImmutableSet.<ResourceLocation>of();
+		public Map<ResourceLocation, ResourceThunk> listResources(String string, Predicate<ResourceLocation> predicate) {
+			return Map.of();
+		}
+
+		@Override
+		public Map<ResourceLocation, List<ResourceThunk>> listResourceStacks(String string, Predicate<ResourceLocation> predicate) {
+			return Map.of();
 		}
 
 		@Override
